[package]
name = "koji"
version = "3.3.1"
edition = "2021"
authors = [
  "Finley Thomalla <finley@thomalla.ch>",
  "Danny Tatom <its.danny@hey.com>",
]
description = "An interactive CLI for creating conventional commits."
documentation = "https://docs.rs/koji"
repository = "https://github.com/cococonscious/koji"
license = "MIT"

[[bin]]
name = "koji"
path = "src/bin/main.rs"

[lib]
name = "koji"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cocogitto = { version = "6.5", default-features = false }
conventional_commit_parser = "0.9"
dirs = "6.0"
emojis = "0.8"
indexmap = "2.10"
serde = { version = "1.0", features = ["derive"] }
inquire = "0.9"
clap_complete_command = { version = "0.6", features = ["nushell"]}
config = { version = "0.15", features = ["toml"] }
xdg = "3.0"
gix = "0.75.0"

[features]
vendored-openssl = []

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.12.0"
rusty-hook = "^0.11.2"

[target.'cfg(not(windows))'.dev-dependencies]
rexpect = "0.6.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[profile.release]
opt-level = "z"
codegen-units = 1
